# risk-perception-and-fatigue

./: Untitled.ipynb  make_plots.py  o_params.yaml  params.yaml  pre_run_sensitivity.py  pyproject.toml  run.py  validity_tests.py
dash_app/: app.py  callbacks.py  main.py  utils.py
dash_app/layouts/: main_layout.py
dash_app/models/: registry.py  sicr_pf.py  sicr_pf_v2.py  sir_dash.py  sircp_dash.py  test.py  test2.py
dash_app/models/deprecated/: failed_sircp_plotly.py  sircp.py  sircp_dash_exp.py  sirp.py
data/: cases.csv  clean_data.py  config.py  data_slicer.py  generate_plots.py
data/scripts/: clean_data.py  config.py  data_slicer.py  generate_plots.py  seasonality_acf.py  seasonality_psd.py
data/sliced_data/: slice_1.csv  slice_2.csv  slice_3.csv  slice_4.csv  slice_5.csv  slice_6.csv
data/source_data/: 2_cas_confirme_quo.csv
reports/2025-11-06_003134/: best_params.csv  cv_metrics.csv  fit_series.csv
reports/2025-11-06_005326/: best_params.csv  cv_metrics.csv  jacobian_error.txt  profile_alpha.csv  profile_beta0.csv  profile_k.csv  profile_rho.csv  psd.csv
reports/2025-11-08_105127/: best_params.csv  cv_metrics.csv  fit_series.csv
reports/2025-11-12_113412/: best_params.csv  cv_metrics.csv  fit_series.csv
reports/2025-11-12_125904/slice_0/: all_effective_params.csv  best_params.csv
reports/2025-11-12_125904/slice_1/: all_effective_params.csv  best_params.csv
src/: diagnostics.py  dynamics.py  fit.py  metrics.py  model.py  observation.py  plot_graphs.py  pre_run_sensitivity.py  run.py  sensitivity.py  verify.py
src/config/: params.yaml
(+89 files in other folders)
