[project]
name = "sir"
version = "0.1.0"
description = "Modelling of an epidemic"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=3.2.0",
    "pandas>=2.3.3",
    "pyswarms>=1.3.0",
    "salib>=1.5.2",
    "statsmodels>=0.14.5",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
SIR = "sir:main"
